infra/k8s/fastboopmos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastboopmos
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: fastboopmos
  template:
    metadata:
      labels:
        app: fastboopmos
    spec:
      containers:
        - name: frontdoor
          image: ghcr.io/samcday/fastboopmos-frontdoor:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 2
              memory: 2Gi
          volumeMounts:
            - name: cache
              mountPath: /cache
      volumes:
        - name: cache
          hostPath:
            path: /var/cache/fastboopmos
            type: DirectoryOrCreate
