infra/k8s/fastboopmos/gha-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastboopmos-gha-proxy
spec:
  selector:
    app.kubernetes.io/name: fastboopmos-gha-proxy
  ports:
    - name: http
      port: 80
      targetPort: http
