infra/k8s/fastboopmos/release-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastboopmos-release
spec:
  selector:
    app.kubernetes.io/name: fastboopmos-release
  ports:
    - name: http
      port: 80
      targetPort: http
