infra/k8s/fastboopmos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastboopmos-frontdoor
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
