infra/k8s/fastboopmos/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fastboopmos
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  hostnames:
    - fastboopmos.samcday.com
  parentRefs:
    - name: shared
      namespace: kube-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: fastboopmos-frontdoor
          port: 80
